# petstore-api-tests

./: .env  README.md  conftest.py  pyproject.toml  pytest.ini
tests/config/: settings.yaml
tests/resources/find-pets-by-status/: find-pets-by-status_request.json
tests/resources/get-pet-by-id/: auth_chain.yaml  get-pet-by-id_custom_data.json  get-pet-by-id_request.json
tests/resources/get-store-inventory/: get-store-inventory.csv  get-store-inventory_request.json
tests/resources/get-user-by-username/: get-user-by-username_assertions.json  get-user-by-username_request.json  sql_chain.json
